--- a/header.html
+++ b/header.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header>
+    <!------------start top bar---------- -->
   <section class="row gx-0 align-items-center bg-black">
     <div class="col-lg-7 px-5 text-start">
       <div class="h-100 d-inline-flex align-items-center me-4">
@@ -34,6 +35,7 @@
       </nav>
     </div>
   </section>
+      <!------------finish top bar---------- -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5" style="background-color: whitesmoke !important">
         <a class="navbar-brand d-flex align-items-center" href="/">
           <h1 class="m-0">
